--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+ <p><a href="/Artem/1.jpg">1</a></p> 
+ <p><a href="/Andrey/1.jpg">1</a></p> 
 </body>
 </html>
